css/index.css
/* ... */
@media screen and (min-width: 890px), screen and (min-width: 720px) and (max-width: 890px), screen and (min-width: 600px) and (max-width: 720px), screen and (min-width: 523px) and (max-width: 890px) {
    #connect {
        text-align: center;
    }
    #connect ul {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;
        column-gap: 1.5rem;
    }
    h1 {
        margin-top: 0.67rem;
    }
    #experience ul {
        padding-left: 40px;
    }
}

@media screen and (min-width: 890px), screen and (min-width: 720px) and (max-width: 890px) {
    .hideable {
        visibility: visible;
    }
}
@media screen and (min-width: 890px) {
    input {
        width: 27rem;
    }
    textarea {
        width: 42rem;
        height: 18rem;
    }
    input[type=text] {
        width: 19.5rem;
    }
    img {
        top: 2rem;
        width: 6rem;
    }
}
@media screen and (min-width: 720px) and (max-width: 890px) {
    input {
        width: 62%;
    }
    textarea {
        width: 97%;
        height: 15rem;
    }
    input[type=text] {
        width: 45%;
    }
    img {
        top: 1.9rem;
        width: 5.5rem;
    }
}    
@media screen and (min-width: 600px) and (max-width: 720px) {
    input {
        width: 67%;
    }
    textarea {
        width: 97%;
        height: 12rem;
    }
    input[type=text] {
        width: 55%;
    }
    img {
        top: 1.8rem;
        width: 5rem;
    }
}
@media screen and (min-width: 600px) and (max-width: 890px) {
    .subListOfInnerList li:first-child {
        display: list-item;
        list-style-type: disc;
    }
}
@media screen and (min-width: 0px) and (max-width: 890px) {
    .subListOfInnerList li {
        display: none;
    }
}
@media screen and (min-width: 510px) and (max-width: 600px), screen and (min-width: 0px), screen and (min-width: 523px) {
    input {
        width: 77%;
        min-width: 245px;
    }
    textarea {
        width: 97%;
        min-width: 250px;
        height: 12rem;
    }
    input[type=text] {
        width: 64%;
        min-width: 235px;
    }
}

@media screen and (min-width: 523px) and (max-width: 600px), screen and (min-width: 0px) and (max-width: 522px) {
    #main-navigation ul {
         justify-content: center; 
    }
}

@media screen and (min-width: 523px) and (max-width: 599px) {
    img {
        top: 1.4rem;
        width: 5rem;
    }
}
@media screen and (min-width: 0px) and (max-width: 523px) {
    #website-brand div {
        margin-bottom: 1.5rem;
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
    }
    img {
        margin-right: .5rem;
        width: 6rem;
        margin-top: 2.3rem;
    }
    #experience li.outerList {
        margin-left: -0.5rem;
    }
    #projects > ul {
        display: flex;
        min-width: 150px;
        flex-direction: column;
        padding-left: 4.7rem;
        padding-right: 1.5rem;
        padding-bottom: 1.8rem;
        background-color: rgba(192, 212, 225, .4);
        border: .2rem solid #336699;
        border-radius: .9rem;
        box-sizing: border-box;
    }
    .subListOfInnerList2 {
        display: none;
        flex-direction: column;
        box-sizing: border-box;
        overflow-wrap: break-word;
        
    }
    .description-li {
        display: none;
    }
    .projectListItems, .subListOfInnerList2 > li {
        list-style-type: none;
        margin-left: -2.5rem;
        box-sizing: border-box;
        overflow-wrap: break-word;
    }
    #connect {
        text-align: left;
    }
    
    h1 {
        margin-top: 0.2em;
    }
    #experience ul {
        padding-left: 0;
    }
    #experience ul ul {
        padding-left: 1.9rem;
    }
    #skills ul {
        padding-left: 0;
    }
}
input:hover, textarea:hover {
    border-color: #8EACBB;
}
button {
    font-size: 1.5rem;
    letter-spacing: .1rem;
    color: #FFF;
    padding: .7rem .9rem;
    border-radius: .7rem;
}
button[type=submit] {
    border: .2rem solid #303e45;
    background-color: #385360;
    font-family: 'Righteous', cursive;
}
button[type=submit]:hover {
    border: .2rem solid #3d4f58;
    background-color: #a2d6e0;
    color: #242e33;
    margin-left: .1rem;
    margin-top: -.1rem;
}
#edit-btn, #save-btn, #remove-btn {
    background-color: #8EACBB;
    color: #071734;
    font-family: 'Blinker', sans-serif;
    font-weight: 600;
}
#edit-btn, #save-btn, #remove-btn {
    display: inline-block;
    margin-right: .4em;
}
#save-btn {
    margin-left: 5rem;
}
footer {
    margin: 0;
    padding: 0;
    background-color: #CAF0F8;
}
section#connect {
    padding-top: 0;
}
#connect h2 {
    padding-top: .7rem;
    text-align: left;
}
#copyright {
    margin-top: 2.9rem;
    padding-bottom: 3.5rem;
    text-align: center;
}

